--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,8 @@
 global.params.p1=104
 global.params.p2=499
+spring.h2.console.enabled=true
+spring.cloud.config.discovery.enabled=true
+eureka.instance.prefer-ip-address=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.cloud.config.enabled=true
+management.endpoints.web.exposure.include=*
